--- a/app/.gitignore
+++ b/app/.gitignore
@@ -41,4 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+ios/Flutter/Release.xcconfig
+ios/Flutter/Debug.xcconfig
 .idea/
