--- a/routour/pubspec.yaml
+++ b/routour/pubspec.yaml
@@ -60,6 +60,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+  assets:
+    - assets/Logo/
+    - assets/Icon/
+    - assets/Dummy/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
